# desihigh

./: .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Colab.ipynb  DESI.ipynb  DesigningDESI.ipynb  DistanceMeasures.ipynb  Dockerfile  DrHarveyWashingtonBanks.ipynb  FromMayaToDESI.ipynb  Intro.ipynb  Intro_Short.ipynb  LICENSE  Lymanalphaforest_explorers.ipynb  NumPyCrashCourseDemo.ipynb  OII.ipynb  PythonTutorial.ipynb  README  README.md  RipplesInTheCosmos.ipynb  SnowWhiteDwarf.ipynb  SupernovaeBrain.ipynb  __init__.py  colab.py  enviroment.yml  environment.yml  hubble.py~  index.md  jtcommands  jtcommands~  legacy.py  minimal_environment.yml  nbody.ipynb  notebook_tester.py  pyproject.toml  requirements.txt  requirements.txt~  setup.cfg  setup_colab.py  (+1 more)
.github/: FUNDING.yml
.ipynb_checkpoints/: DESI-checkpoint.ipynb  Intro-checkpoint.ipynb  nbody-checkpoint.ipynb
Bengali/: Intro.ipynb
Binder/: Stats.ipynb
Developers/: AlmaGonzalez.md  GustavoNiz.md  MarianaVargasMagana.md
Espanol/: CODE_OF_CONDUCT_es.md  Clusters_es.ipynb  Colab_es.ipynb  DESI_es.ipynb  DesigningDESI.ipynb  DesigningDESI_es.ipynb  FromMayaToDESI_es.ipynb  Intro_es.ipynb  README.md  SnowWhiteDwarf.ipynb  SnowWhiteDwarf_es.ipynb  SupernovaeBrain_es.ipynb  nbody_es.ipynb  notebook_tester.py
Graduation/: README.md
Nepali/: Intro.ipynb
TheTest/: README.md
dat/: bgs-supernovae.fits  lrg_cat_viewer.fits  sn_simspectra.npz
data/: black_body.csv  desi_mock_chain.npy  fibers-153-20210504.fits  lrg_cat_pos.txt  lss_catalogs_nz.pickle  subway_boston.yaml  subway_london.csv  subway_paris.csv
desihigh/: file_generation.py  galaxies.py  generate_files.py  inference.py  nofz.py  survey_tiles.py  tpcf.py  universe.py
docs/: MEMORIAL
legacy_blend/: Blender.ipynb
pmout/: pmout.ipynb
prep/: cosmicflows.py  prep_bao.py  prep_data.py  prep_wd.py
sandbox/: CODE_OF_CONDUCT_es.md  DESI_Mex.ipynb  HispanicCelebration.ipynb  Kukulkan.ipynb  LRG_BAO.ipynb  MayaToDESI.ipynb  MayaToDESI_es.ipynb  RipplesInTheCosmos.ipynb  SupernovaeBrain.ipynb  Transient-01-Simulations.ipynb  Transient-02-Classification.ipynb  WhiteDwarf.ipynb  tsz.ipynb
student_andes/: all_ids.txt  coadd-bgs-66003-20200315.fits  coadd-elg-67230-20200315.fits  (+10 more)
(+184 files in other folders)
