[metadata]
name = desihigh
version = 0.1
license = BSD-3-Clause
license_files = LICENSE
description = Easy install of the DESI High environment for off-Binder development.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Michael J Wilson
author_email = mjwilson@lbl.gov
maintainer = Michael J Wilson
maintainer_email = mjwilson@lbl.gov
url = https://www.desi.lbl.gov/
download_url = https://github.com/michaelJwilson/desihigh
classifiers =
    License :: OSI Approved :: BSD-3-Clause
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    pip
    wget
    numpy
    matplotlib
    pandas
    astropy
    scipy
    jupyter
    pyephem
    notebook
    nbformat
    cryptography
    tensorflow
    scikit-learn

setup_requires =
    pytest
    pytest-cov
    coveralls
